@@ -308,7 +308,8 @@ Special Pages:
 * (bug 4359) red [[user:#id]] links generated in [[special:Log]]
 * (bug 1996) Special page to list redirects
 * (bug 4334) Add "watch" links to Special:Unwatchedpages
-* Generate user page links in Special:Ipblocklist where appropriate (i.e. not an autoblock)
+* Generate target user page links in Special:Ipblocklist where appropriate (i.e. not an autoblock)
+* Generate link to talk page of the blocker in Special:Ipblocklist, move contribs. link of the target next to their name
 
 Misc.:
 * PHP 4.1 compatibility fix: don't use new_link parameter to mysql_connect
